[HTML/SASS] Fix footer on mobile

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -73,7 +73,7 @@
   -ms-grid-column: 2 / 3;
 }
 
-.footer__item__right-active {
+.footer__item__right--active {
   display: none;
 }
 
